[gd_scene load_steps=5 format=3 uid="uid://cv38ksioak5uq"]

[ext_resource type="Texture2D" uid="uid://cqjobqyr7tip2" path="res://assets/enemy.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://3hg4vgsfhmrw" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_md0e3"]
radius = 46.5
height = 126.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ra3w"]
radius = 54.0
height = 144.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_md0e3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(10, 5)
scale = Vector2(5, 5)
texture = ExtResource("1_7p1mj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 0)
shape = SubResource("CapsuleShape2D_md0e3")

[node name="StunTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.88, 0.88)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_4ra3w")

[connection signal="timeout" from="StunTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
